--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             justify-content: center;
             flex-grow: 1;
             width: 100%;
+            position: relative;
         }
         .coin-icon {
             width: 150px;
@@ -30,6 +31,7 @@
             background: url('coin.png') no-repeat center;
             background-size: contain;
             margin-bottom: 20px;
+            margin-top: -300px; /* Поднимаем иконку на 300 пикселей вверх */
         }
         .coin-count {
             font-size: 36px;
