--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             justify-content: space-between;
             flex-direction: column;
             align-items: center;
+            user-select: none; /* Отключаем выделение текста */
+            touch-action: none; /* Отключаем жесты прикосновения, такие как масштабирование */
         }
         .main-content {
             display: flex;
