--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             align-items: center;
             user-select: none; /* Отключаем выделение текста */
             touch-action: none; /* Отключаем жесты прикосновения, такие как масштабирование */
+            overflow: hidden; /* Отключаем вертикальную прокрутку */
         }
         .main-content {
             display: flex;
@@ -26,6 +27,7 @@
             flex-grow: 1;
             width: 100%;
             position: relative;
+            overflow: hidden; /* Избегаем любых прокруток */
         }
         .coin-icon {
             width: 150px;
@@ -113,6 +115,11 @@
     </div>
 
     <script>
+        // Отключение скроллинга на мобильных устройствах
+        document.addEventListener('touchmove', function(event) {
+            event.preventDefault();
+        }, { passive: false });
+
         // Функции для переключения между экранами
         function goHome() {
             hideAll();
