--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             justify-content: space-between;
             flex-direction: column;
             align-items: center;
-            user-select: none; /* Отключаем выделение текста */
-            touch-action: none; /* Отключаем жесты прикосновения, такие как масштабирование */
-            overflow: hidden; /* Отключаем вертикальную прокрутку */
+            user-select: none;
+            touch-action: none;
+            overflow: hidden;
         }
         .main-content {
             display: flex;
@@ -27,7 +27,7 @@
             flex-grow: 1;
             width: 100%;
             position: relative;
-            overflow: hidden; /* Избегаем любых прокруток */
+            overflow: hidden;
         }
         .coin-icon {
             width: 150px;
@@ -35,7 +35,7 @@
             background: url('coin.png') no-repeat center;
             background-size: contain;
             margin-bottom: 20px;
-            margin-top: -300px; /* Поднимаем иконку на 300 пикселей вверх */
+            margin-top: -300px;
         }
         .coin-count {
             font-size: 36px;
@@ -64,11 +64,11 @@
         .button img {
             width: 40px;
             height: 40px;
-            filter: brightness(0.7); /* Светло-серый цвет */
+            filter: brightness(0.7);
             transition: filter 0.2s ease;
         }
         .button.active img {
-            filter: brightness(1); /* Белый цвет при нажатии */
+            filter: brightness(1);
         }
         .hidden {
             display: none;
@@ -115,8 +115,12 @@
     </div>
 
     <script>
-        // Telegram WebApp API - раскрытие на весь экран
-        window.Telegram.WebApp.expand();
+        // Проверяем наличие Telegram WebApp API
+        if (window.Telegram && window.Telegram.WebApp) {
+            window.Telegram.WebApp.expand();
+        } else {
+            console.error("Telegram WebApp не обнаружен.");
+        }
 
         // Отключение скроллинга на мобильных устройствах
         document.addEventListener('touchmove', function(event) {
@@ -160,8 +164,8 @@
         // Функция для активации кнопки и изменения цвета иконки
         function activateButton(button) {
             const buttons = document.querySelectorAll('.button');
-            buttons.forEach(btn => btn.classList.remove('active')); // Убираем активный класс у всех кнопок
-            button.classList.add('active'); // Добавляем активный класс нажатой кнопке
+            buttons.forEach(btn => btn.classList.remove('active'));
+            button.classList.add('active');
         }
     </script>
 
