--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
             font-family: Arial, sans-serif;
             color: white;
             display: flex;
-            justify-content: space-between;
-            flex-direction: column;
+            justify-content: center;
             align-items: center;
             user-select: none;
             touch-action: none;
@@ -24,8 +23,8 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            flex-grow: 1;
             width: 100%;
+            height: calc(100% - 70px); /* Учитываем высоту панели кнопок */
             position: relative;
             overflow: hidden;
         }
@@ -35,7 +34,6 @@
             background: url('coin.png') no-repeat center;
             background-size: contain;
             margin-bottom: 20px;
-            margin-top: -300px;
         }
         .coin-count {
             font-size: 36px;
@@ -50,6 +48,7 @@
             bottom: 0;
             padding: 10px; /* Уменьшил отступ для лучшего соответствия размерам кнопок */
             background-color: black;
+            box-sizing: border-box; /* Учитываем паддинг в ширине и высоте */
         }
         .button {
             background-color: transparent;
@@ -196,6 +195,26 @@
             buttons.forEach(btn => btn.classList.remove('active'));
             button.classList.add('active');
         }
+
+        // Функция для активации полноэкранного режима
+        function enterFullScreen() {
+            if (document.documentElement.requestFullscreen) {
+                document.documentElement.requestFullscreen();
+            } else if (document.documentElement.mozRequestFullScreen) { /* Firefox */
+                document.documentElement.mozRequestFullScreen();
+            } else if (document.documentElement.webkitRequestFullscreen) { /* Chrome, Safari and Opera */
+                document.documentElement.webkitRequestFullscreen();
+            } else if (document.documentElement.msRequestFullscreen) { /* IE/Edge */
+                document.documentElement.msRequestFullscreen();
+            }
+        }
+
+        // Запускаем полноэкранный режим при загрузке страницы
+        window.onload = function() {
+            goHome(); // Показываем домашнюю страницу при загрузке
+            activateButton(document.getElementById('homeButton')); // Активируем кнопку "Дом"
+            enterFullScreen(); // Переключаемся в полноэкранный режим
+        };
     </script>
 
 </body>
